# materia-theme

./: .gitignore  CHANGELOG.md  HACKING.md  INSTALL.md  INSTALL_GDM_THEME.md  README.md  TODO.md  change_color.sh  index-dark-compact.theme  index-light-compact.theme  index.theme  install.sh  materia.sh  meson.build  meson_options.txt  package-lock.json  package.json  parse-sass.sh  render-assets.sh  snapshot.sh  test.sh
src/: _color-palette.scss  _colors.scss  _colors.scss.template  _shadow.scss  _st-theme.scss  _theme-color.scss  _theme-color.template.scss  _theme.scss  _variables.scss  index-compact.theme  index-dark-compact.theme  index-dark.theme  index-light-compact.theme  index-light.theme  index.theme  index.theme.in  meson.build  qt6ct_palette.conf
src/_sass/: _color-palette.scss  _colors.scss  _colors.scss.template  _variables.scss
src/_sass/chrome/: _scrollbars.scss
src/_sass/cinnamon/: _common.scss  _extends.scss  _over-rides.scss
src/_sass/gnome-shell/: _common-3.18.scss  _common-3.24.scss  _common-3.26.scss  _common-3.28.scss  _common-3.30.scss  _common-3.32.scss  _common-3.34.scss  _components.scss  _drawing.scss  _extensions.scss  _variables.scss
src/_sass/gtk/: _apps-3.18.scss  _apps-3.20.scss  _apps-3.22.scss  _colors-public.scss  _common-3.18.scss  _common-3.20.scss  _drawing-3.18.scss  _drawing-3.20.scss  _variables.scss
src/chrome/: Flat-Plat Scrollbars.crx  Flat-Plat Theme.crx  Flat-Plat-dark Scrollbars.crx  Flat-Plat-dark Theme.crx  Flat-Plat-light Theme.crx  Materia Theme.crx  Materia-dark Scrollbars.crx  assets.txt  chrome-scrollbar-dark.crx  chrome-scrollbar.crx  chrome-theme-dark.crx  chrome-theme-light.crx  chrome-theme.crx  meson.build  render-asset.sh  render-assets.sh
src/chrome/Flat-Plat Scrollbars/: manifest.json  scrollbars.css
src/chrome/Flat-Plat Theme/: manifest.json
src/chrome/Flat-Plat-dark Scrollbars/: manifest.json  scrollbars.css
src/chrome/Flat-Plat-dark Theme/: manifest.json
src/chrome/Flat-Plat-light Theme/: manifest.json
src/chrome/Materia Scrollbars/: manifest.json
src/chrome/Materia-dark Scrollbars/: manifest.json
src/chrome/Materia-light Theme/: manifest.json
src/chrome/chrome-scrollbar/: manifest.json  scrollbars.css  scrollbars.scss
src/chrome/chrome-scrollbar-dark/: manifest.json  scrollbars.css  scrollbars.scss
src/chrome/chrome-theme/: manifest.json
src/chrome/chrome-theme-dark/: manifest.json
src/chrome/chrome-theme-light/: manifest.json
src/chrome/sass/: _scrollbars.scss
src/cinnamon/: cinnamon-compact.css  cinnamon-compact.scss  cinnamon-dark-compact.css  cinnamon-dark-compact.scss  cinnamon-dark.css  cinnamon-dark.scss  cinnamon-light-compact.css  cinnamon-light-compact.scss  cinnamon-light.css  cinnamon-light.scss  cinnamon.css  cinnamon.scss  cinnamon.scss.in  meson.build
src/cinnamon/sass/: _common.scss  _extends.scss
src/gnome-shell/: Gemfile  HACKING  README.md  gnome-shell-theme.gresource.xml  gnome-shell.scss.in  meson.build
src/gnome-shell/3.16/: gnome-shell.scss
src/gnome-shell/3.18/: _colors.scss  _common.scss  gnome-shell-compact.css  gnome-shell-compact.scss  gnome-shell-dark-compact.css  gnome-shell-dark-compact.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light-compact.css  gnome-shell-light-compact.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell-theme.gresource  gnome-shell-theme.gresource.xml  gnome-shell.css  gnome-shell.scss  gnome-shell_laptop.scss
src/gnome-shell/3.20/: README  gnome-shell-light.css  gnome-shell-theme.gresource  gnome-shell-theme.gresource.xml  gnome-shell.scss  gnome-shell_light.scss
src/gnome-shell/3.22/: gnome-shell-light.scss  parse-sass.sh
src/gnome-shell/3.24/: extensions  gnome-shell-compact.css  gnome-shell-compact.scss  gnome-shell-dark-compact.css  gnome-shell-dark-compact.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light-compact.css  gnome-shell-light-compact.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell-theme.gresource.xml  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.26/: gnome-shell-compact.css  gnome-shell-compact.scss  gnome-shell-dark-compact.css  gnome-shell-dark-compact.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light-compact.css  gnome-shell-light-compact.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell-theme.gresource.xml  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.28/: gnome-shell-compact.css  gnome-shell-compact.scss  gnome-shell-dark-compact.css  gnome-shell-dark-compact.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light-compact.css  gnome-shell-light-compact.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.30/: gnome-shell-compact.css  gnome-shell-compact.scss  gnome-shell-dark-compact.css  gnome-shell-dark-compact.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light-compact.css  gnome-shell-light-compact.scss  gnome-shell-light.css  gnome-shell-light.scss  gnome-shell.css  gnome-shell.scss
src/gnome-shell/3.32/: gnome-shell-compact.css  gnome-shell-compact.scss  gnome-shell-dark-compact.css  gnome-shell-dark-compact.scss  gnome-shell-dark.css  gnome-shell-dark.scss  gnome-shell-light-compact.css  gnome-shell-light-compact.scss  gnome-shell-light.css  gnome-shell-light.scss  (+2 more)
src/gtk/: assets.txt  gtk-dark.scss.in  gtk.scss.in  meson.build  render-asset.sh  render-assets.sh
src/gtk-2.0/: apps.rc  assets.txt  gtkrc  gtkrc-dark  gtkrc-light  main.rc  main.rc.hidpi  meson.build  render-asset-dark.sh  render-asset.sh  render-assets-dark.sh  render-assets.sh
src/gtk-3.0/: gtk-compact.css  gtk-dark.scss.in  gtk-light.css  gtk.scss.in  meson.build  render-asset.sh  render-assets.sh
src/gtk-4.0/: gtk-dark.scss.in  gtk.scss.in  meson.build
src/metacity-1/: meson.build  metacity-theme-2-dark.xml  metacity-theme-2-light.xml  metacity-theme-2.xml  metacity-theme-3-light.xml  metacity-theme-3.xml
src/plank/: meson.build
src/unity/: dash-widgets.json  meson.build
src/xfwm4/: meson.build
(+441 files in other folders)
