# Materia
install_data(
  ['gtk.css', 'gtk-dark.css'],
  install_dir: join_paths(themedir, 'MateriaTEST', 'gtk-3.0')
)

# Materia-compact
install_data(
  ['gtk-compact.css', 'gtk-dark-compact.css'],
  rename: ['gtk.css', 'gtk-dark.css'],
  install_dir: join_paths(themedir, 'MateriaTEST-compact', 'gtk-3.0')
)

# Materia-dark
install_data(
  ['gtk-dark.css'],
  rename: ['gtk.css'],
  install_dir: join_paths(themedir, 'MateriaTEST-dark', 'gtk-3.0')
)

# Materia-dark-compact
install_data(
  ['gtk-dark-compact.css'],
  rename: ['gtk.css'],
  install_dir: join_paths(themedir, 'MateriaTEST-dark-compact', 'gtk-3.0')
)

# Materia-light
install_data(
  ['gtk-light.css', 'gtk-dark.css'],
  rename: ['gtk.css', 'gtk-dark.css'],
  install_dir: join_paths(themedir, 'MateriaTEST-light', 'gtk-3.0')
)

# Materia-light-compact
install_data(
  ['gtk-light-compact.css', 'gtk-dark-compact.css'],
  rename: ['gtk.css', 'gtk-dark.css'],
  install_dir: join_paths(themedir, 'MateriaTEST-light-compact', 'gtk-3.0')
)
